--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
                             Locked
                         </div>
                     </div>
+                    <!-- Revenue Ad Script -->
+<script async="async" data-cfasync="false" src="//pl27692688.revenuecpmgate.com/0b7c18d6fdad2318c6155e42126ebe75/invoke.js"></script>
+<div id="container-0b7c18d6fdad2318c6155e42126ebe75"></div>
+
 
                     <div class="reward-card" id="special-features-reward">
                         <div class="reward-icon">
@@ -360,3 +364,4 @@
     <script type="text/javascript" src="//www.highperformanceformat.com/f907d632a32a8e648a202f3b44dcc043/invoke.js"></script>
 </body>
 </html>
+
